# hcls-ai-agents

./: .bandit-baseline.json  .gitignore  .gitleaks.toml  .secrets.baseline  AGP-CONFORMANCE.md  AWS-RUN-COST.md  CHANGELOG.md  CONTRIBUTING.md  ENTERPRISE-PLATFORM.md  HCLS-Agentic-AI-Suite-Executive-Overview.pptx  HCLS-Customer-Teaser-5slide.pptx  HCLS-One-Pager.pptx  LICENSE  MATURITY.yaml  Makefile  NOT-CLAIMS.md  OPERATING-MODEL.md  README.md  RELEASE-PACKET.md  SECURITY-CI.md  SECURITY.md  SOLUTION-FIELD-GUIDE.md  SOURCES.md  SUITE-STATUS.md  conftest.py  package.json  pytest.ini
01-regulatory-writing-agent/: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
02-pharmacovigilance-agent/: .env.example  ASSURANCE-PACKET.md  Dockerfile  PILOT-SOW.md  (+6 more)
platform_core/: pyproject.toml  requirements-lock.txt
platform_core/hcls_agent_platform/: __init__.py  auth.py  budget.py  comprehend_medical.py  llm_factory.py  phi.py  pii_masker.py  secrets.py  tracing.py
platform_core/hcls_agent_platform/a2a/: README.md  __init__.py  supervisor.py
platform_core/hcls_agent_platform/connectors/: README.md  __init__.py  base.py  factory.py  fixtures.py  live.py  openfda.py
platform_core/hcls_agent_platform/mcp_gateway/: README.md  __init__.py  approvals.py  audit.py  errors.py  gateway.py  policy.py  tokens.py
platform_core/tests/: test_a2a.py  test_agp_conformance.py  test_approval_consumption.py  test_budget.py  test_connector_audit.py  test_connector_identity.py  test_connectors.py  test_mcp_gateway.py  test_platform.py  test_reviewer_service.py
(+606 files in other folders)
