[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hcls-agent-platform"
version = "0.1.0"
description = "Shared production primitives for the HCLS / Life Sciences agent suite (LLM factory, PHI masking, MCP authorization gateway, connectors)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Life Sciences GTM Accelerator" }]
dependencies = []

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.2"]
bedrock = ["langchain-aws>=0.2", "boto3>=1.34"]
auth = ["pyjwt[crypto]>=2.8"]
tracing = ["opentelemetry-api>=1.25", "opentelemetry-sdk>=1.25"]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hcls_agent_platform*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Aegis Governance Pattern conformance — see the Aegis repo
# docs/14-GOVERNANCE-PATTERN-VERSIONING.md. This package IMPLEMENTS the pattern.
[tool.aegis]
role = "implementation"
governance_pattern = "1.0"
